bk_ida/gccida/g0/find_splittable_givs
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_splittable_givs/src/unroll.c:3163:1: error: must use 'enum' tag to refer to type 'unroll_types'
unroll_types unroll_type, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_splittable_givs/src/unroll.c:3174:1: error: use of undeclared identifier 'induction_1'
induction_1 *same; // [rsp+40h] [rbp-70h] 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_splittable_givs/src/unroll.c:3174:14: error: use of undeclared identifier 'same'
induction_1 *same; // [rsp+40h] [rbp-70h] 
             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_splittable_givs/src/unroll.c:3187:1: error: use of undeclared identifier 'induction_1'
induction_1 *v2; // [rsp+A0h] [rbp-10h] 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_splittable_givs/src/unroll.c:3187:14: error: use of undeclared identifier 'v2'
induction_1 *v2; // [rsp+A0h] [rbp-10h] 
             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_splittable_givs/src/unroll.c:3188:1: error: use of undeclared identifier 'induction_1'
induction_1 *v2a; // [rsp+A0h] [rbp-10h] 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_splittable_givs/src/unroll.c:3188:14: error: use of undeclared identifier 'v2a'
induction_1 *v2a; // [rsp+A0h] [rbp-10h] 
             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_splittable_givs/src/unroll.c:3189:1: error: use of undeclared identifier 'induction_1'
induction_1 *v2b; // [rsp+A0h] [rbp-10h] 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_splittable_givs/src/unroll.c:3189:14: error: use of undeclared identifier 'v2b'
induction_1 *v2b; // [rsp+A0h] [rbp-10h] 
             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_splittable_givs/src/unroll.c:3190:1: error: use of undeclared identifier 'induction_1'
induction_1 *v; // [rsp+A8h] [rbp-8h] 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_splittable_givs/src/unroll.c:3190:14: error: use of undeclared identifier 'v'
induction_1 *v; // [rsp+A8h] [rbp-8h] 
             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_splittable_givs/src/unroll.c:3191:1: error: use of undeclared identifier 'induction_1'
induction_1 *va; // [rsp+A8h] [rbp-8h] 
^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_splittable_givs/src/unroll.c:3191:14: error: use of undeclared identifier 'va'
induction_1 *va; // [rsp+A8h] [rbp-8h] 
             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_splittable_givs/src/unroll.c:3195:7: error: use of undeclared identifier 'v'
for ( v = bl_0->giv; v; v = v->next_iv ) 
      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_splittable_givs/src/unroll.c:3195:22: error: use of undeclared identifier 'v'
for ( v = bl_0->giv; v; v = v->next_iv ) 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_splittable_givs/src/unroll.c:3195:25: error: use of undeclared identifier 'v'
for ( v = bl_0->giv; v; v = v->next_iv ) 
                        ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_splittable_givs/src/unroll.c:3195:29: error: use of undeclared identifier 'v'
for ( v = bl_0->giv; v; v = v->next_iv ) 
                            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_splittable_givs/src/unroll.c:3197:7: error: use of undeclared identifier 'v2'
for ( v2 = v->next_iv; v2; v2 = v2->next_iv ) 
      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_splittable_givs/src/unroll.c:3197:12: error: use of undeclared identifier 'v'
for ( v2 = v->next_iv; v2; v2 = v2->next_iv ) 
           ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/find_splittable_givs/src/obj/unroll.o] Error 1
